# HaskDragon

./: .dockerignore  .gitignore  .stack.alpine  .stack.debian  Application.hs  README.md  build-digitaloc-dock.sh  build-with-dock.sh  client_session_key.aes  haskdragon.cabal  restore-docker-yaml  restore-original-yaml  stack.yaml
Handlers/Cat/: MHandler.hs  Route.hs
Handlers/Info/: InfoContent.hs  InfoRoute.hs
Handlers/Map/: MHandler.hs  MapHandler.hs  MapRoute.hs  Route.hs
Handlers/Player/: PlayerHandler.hs  PlayerRoute.hs
Model/: GameMap.hs  PlayerInfo.hs
Persistence/: Red.hs
Tool/: StrTools.hs
app/: Main.hs
app/Info/: InfoContent.hs  InfoRoute.hs
app/Map/: Handler.hs  Route.hs
automation/: auto.md
automation/deploy/: Dockerfile  ambass.js  package-lock.json  package.json  restore-docker-yaml.sh  restore-project-yaml.sh
automation/deploy/stack-originals/: stack-project.yaml
automation/docker-stack-builder/: Dockerfile  docker-compose.yml
src/: Lib.hs
src/Persistence/: Red.hs
src/Tool/: StrTools.hs
tutorial/: Docker.md  Editor.md  Redis.md  Stack.md  Subsite.md  install-docker-on-vm.md
