name:                haskdragon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/edoardo90/YesodExperiments
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      ., app
  exposed-modules:     Persistence.Red
                     , Tool.StrTools
                     , Application
                     , Handlers.Info.InfoContent
                     , Handlers.Info.InfoRoute
                     , Handlers.Map.MapHandler
                     , Handlers.Map.MapRoute
                     , Handlers.Player.PlayerHandler
                     , Handlers.Player.PlayerRoute
                     , Model.GameMap
                     , Model.PlayerInfo

  build-depends:       base >= 4.7 && < 5
                      , mtl
                      , hedis
                      , bytestring
                      , text
                      , yesod
                      , aeson
                      , base64-bytestring
                      , http-types
                      , lens
                      , process
  default-language:    Haskell2010

executable haskdragon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskdragon
                     , yesod
                     , bytestring
                     , text
                     , aeson
                     , http-types
  default-language:    Haskell2010

test-suite haskdragon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskdragon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskdragon
